now we can edit (almost) any database record type

--- a/webservice/templates/edit_screen.html
+++ b/webservice/templates/edit_screen.html
@@ -8,6 +8,7 @@
 </pre>
 <form action="{{action}}" method="POST">
 
+   <input type="hidden", name="classname" value="{{classname}}">
 
    {% for row in screendata %}
       {% if row.values is sequence %}
