get rid of None strings in edit screens

--- a/webservice/templates/edit_screen.html
+++ b/webservice/templates/edit_screen.html
@@ -18,7 +18,7 @@
            {% endfor %}
          </select> <br>
       {% else %}
-         {{row.name}} <input name='{{row.name}}' value='{{row.value}}'> <br>
+         {{row.name}} <input name='{{row.name}}' value='{%if row.value is none %}{%else%}{{row.value}}{%endif%}'> <br>
       {% endif %}
    {% endfor %}
 
