try a different logo icon

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -46,9 +46,12 @@
         <div class="ui vertical inverted sidebar menu" id="toc">
             
             <div class="item">
+                <i class="certfiicate icon"></i>
+              <!--
                 <a class="ui logo icon image" href="">
                     <img src="/poms/static/images/logo.png">
                 </a>
+              -->
                 <a href=""><b>POMS</b></a>
             </div>
             
