--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -46,7 +46,7 @@
         <div class="ui vertical inverted sidebar menu" id="toc">
             
             <div class="item">
-                <i class="certfiicate icon"></i>
+                <i class="certificate icon"></i>
               <!--
                 <a class="ui logo icon image" href="">
                     <img src="/poms/static/images/logo.png">
@@ -149,11 +149,16 @@
                 <div class="toc">
                     <div class="ui vertical inverted sticky menu">
                         
-                        <div class="item">
+                       <div class="item">
+                       <!--  
                             <a class="ui logo icon image" href="">
                                 <img src="/poms/static/images/logo.png">
                             </a>
-                            <a href=""><b>POMS</b></a>
+                        -->
+                            <a href="">
+                              <i class="certificate icon"></i>
+                              <b>POMS</b>
+                            </a>
                         </div>
                         
                         <a class="item" href="dashboard.html">
