--- a/webservice/templates/base.html
+++ b/webservice/templates/base.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="/poms/static/css/semantic.css">
 	<script src="/poms/static/js/semantic.js"></script>
 	<script src="/poms/static/js/poms.js"></script>
+        <script src="/poms/static/js/tablesort.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="/poms/static/css/poms.css">
     </head>
 
