--- a/webservice/templates/admin_screen.html
+++ b/webservice/templates/admin_screen.html
@@ -1,7 +1,6 @@
+{%extends "layout.html"%}
 
-{%extends "menu_base.html" %}
-
-{%block head%}
+{%block title%}
     <title>POMS DB Admin</title>
 {%endblock%}
 
@@ -14,33 +13,33 @@
     </div>
 {%endblock%}
 
-{%block mainpage %}
 
-    <div class="ui masthead vertical segment">
-	<div class="ui container">
-	    <div class="introduction">
-		<h1 class="ui header">
-		    POMS DB Admin
-		    
-		    <div class="sub header">
-			Update database tables directly
-		    </div>
-		</h1>
-	    </div>
-	</div>
+
+
+
+{%block header%}
+<h1 class="ui header">
+     POMS DB ADMIN                                 
+    <div class="sub header">
+        update database tables directly
     </div>
-    
-    <div class="main ui intro container">
-	
-	<h2 class="ui dividing header">Data Types:</h2>
-	
+</h1>
+{%endblock%}
+
+
+
+
+{%block subheader%}
+<h2 class="ui dividing header">Data Types:</h2>
+{%endblock%}
+
+
+
+
+{%block content%}
 <ul>
    {% for type in list %}
-    <li>  <a href="/poms/list_generic?classname={{type}}">{{type}}</a>
+    <li> <a href="/poms/list_generic?classname={{type}}">{{type}}</a> </li>
    {% endfor %}
 </ul>
-	</div>
-	
-    </div>  <!--ends main ui intro container-->
-    
 {%endblock%}
