--- a/webservice/templates/edit_screen.html
+++ b/webservice/templates/edit_screen.html
@@ -1,6 +1,6 @@
-{%extends "menu_base.html" %}
+{%extends "layout.html" %}
 
-{%block head%}
+{%block title%}
     <title>POMS DB Admin</title>
 {%endblock%}
 
@@ -19,26 +19,32 @@
     </div>
 {%endblock%}
 
-{%block mainpage %}
 
-    <div class="ui masthead vertical segment">
-	<div class="ui container">
-	    <div class="introduction">
-		<h1 class="ui header">
-		    {{clasname}} Items
-		    
-		    <div class="sub header">
-			 Edit {{classname}} Item
-		    </div>
-		</h1>
-	    </div>
-	</div>
-    </div>
-    
-    <div class="main ui intro container">
-	
-	<h2 class="ui dividing header">{{classsname}} Items:</h2>
-	
+
+
+
+
+{%block header%}
+<h1 class="ui header">
+         {{clasname}} Items
+                    
+          <div class="sub header">
+              Edit {{classname}} Item
+          </div>
+</h1>
+{%endblock%}
+
+
+
+
+{%block subheader%}
+<h2 class="ui dividing header">{{classsname}} Items:</h2>
+{%endblock%}
+
+
+
+{%block content %}
+
 <form action="{{action}}" method="POST">
 
    <input type="hidden", name="classname" value="{{classname}}">
@@ -65,8 +71,5 @@
 
    <input type="submit" name="_submit"> 
 </form>
-	</div>
 	
-    </div>  <!--ends main ui intro container-->
-    
 {%endblock%}
