added service downtime table

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -22,7 +22,7 @@
             <script src="/poms/static/js/semantic.js"></script>
             
             <script src="/poms/static/js/poms.js"></script>
-            
+            <script src="/poms/static/js/tablesort.min.js"></script>            
             <link rel="stylesheet" type="text/css" href="/poms/static/css/poms.css">
 
 
