--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -32,7 +32,7 @@
             <script src='/poms/static/js/moment.min.js'></script>
             <script src='/poms/static/js/fullcalendar.min.js'></script>
 
-                        
+            <script src='/poms/static/js/jquery-ui.min.js'></script>                        
     </head>
     
     
