--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <!-- Standard Meta -->
+        {%if do_refresh %}
         <meta http-equiv="refresh" content="300" />
+        {% endif %}
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
@@ -32,7 +34,6 @@
             <script src='/poms/static/js/moment.min.js'></script>
             <script src='/poms/static/js/fullcalendar.min.js'></script>
 
-            <script src='/poms/static/js/jquery-ui.min.js'></script>                        
     </head>
     
     
