--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -76,6 +76,15 @@
 
             
             <div class="item">
+                <div class="header">Campaigns</div>
+                <div class="menu">
+                <a class="item" href="/poms/show_campaigns">
+                  Active
+                </a>
+                </div>
+            </div>
+
+            <div class="item">
                 <div class="header">Jobs</div>
                 <div class="menu">
                     
