--- a/webservice/templates/campaign_grid.html
+++ b/webservice/templates/campaign_grid.html
@@ -1,7 +1,7 @@
 {%extends "layout.html"%}
 
 {%block title%}
-    <title>Jobs in Task {{taskid}} </title>
+    <title>POMS:Active Campaigns</title>
 {%endblock%}
 
 
