more calendar improvements

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -32,7 +32,6 @@
             <script src='/poms/static/js/moment.min.js'></script>
             <script src='/poms/static/js/fullcalendar.min.js'></script>
 
-            <script src='/poms/static/js/jquery-ui.min.js'></script>                        
     </head>
     
     
@@ -65,6 +64,10 @@
                 <b>Dashboard</b>
             </a>
             
+            <a class="item" href="/poms/calendar">
+                <b>Calendar</b>
+            </a>
+
             <a class="item" href="requests.html">
                 <b>Requests</b>
             </a>
@@ -172,6 +175,10 @@
                         
                         <a class="item" href="dashboard.html">
                             <b>Dashboard</b>
+                        </a>
+
+                        <a class="item" href="/poms/calendar">
+                            <b>Calendar</b>
                         </a>
                         
                         <a class="item" href="requests.html">
