--- a/webservice/templates/calendar.html
+++ b/webservice/templates/calendar.html
@@ -45,38 +45,7 @@
 
 
 
-
-		/* initialize the external events
-		-----------------------------------------------------------------*/
-		$('#external-events .fc-event').each(function() {
-			// store data so the calendar knows to render an event upon drop
-			$(this).data('event', {
-				title: $.trim($(this).text()), // use the element's text as the event title
-				stick: true // maintain when user navigates (see docs on the renderEvent method)
-			});
-			// make the event draggable using jQuery UI
-			$(this).draggable({
-				zIndex: 999,
-				revert: true,      // will cause the event to go back to its
-				revertDuration: 0  //  original position after the drag
-			});
-		});
-
-
-
-
-
-
-
-
-
-
-
-
                 var date = new Date();
-                var d = date.getDate();
-                var m = date.getMonth();
-                var y = date.getFullYear();
 
 		
 		var calendar = $('#calendar').fullCalendar({
@@ -86,36 +55,25 @@
 				//right: 'month,basicWeek,basicDay'
                                 right: 'month,basicWeek,agendaDay'
 			},
-			//defaultDate: '2015-02-12',
                         defaultDate: date,
 			editable: true,
 			eventLimit: true, // allow "more" link when too many events
                         events:'/poms/calendar_json',
-                
-
-
+                        allDaySlot: false,
 			selectable: true,
 			selectHelper: true,
-                        slotMinutes: 5,
-
+                        slotDuration: '00:05:00',
                         timezone: 'UTC',
-                        droppable: true, //this allows things to be dropped onto the calendar
-                        drop: function() {
-				// is the "remove after drop" checkbox checked?
-				if ($('#drop-remove').is(':checked')) {
-					// if so, remove the element from the "Draggable Events" list
-					$(this).remove();
-				}
-			},
+
+
+
 
                         //CREATE EVENT HERE
-			select: function(start, end, allDay) {
+			select: function(start, end) {
 				var title = prompt('Event Title:');
-				if (title) {
-                                        alert(start);
-                                        alert(end);
-                                        alert(allDay);
 
+
+				if (title) {
 
 
                                         $.post("/poms/add_event", {title: title, start: start/1000, end: end/1000}, 
@@ -123,12 +81,13 @@
                                                       alert(data);
                                                       if(data == "Ok.")
                                                       {
+                                                          //$('#calendar').fullCalendar('refetchEvents');
+
                                                           calendar.fullCalendar('renderEvent',
                                                                   {
                                                                           title: title,
                                                                           start: start,
                                                                           end: end,
-//                                                                          allDay: allDay
                                                                   },
                                                                   true // make the event "stick"
                                                           );
@@ -138,7 +97,7 @@
                             
                                                       else
                                                       {
-                                                        alert("Something went wrong, please try again.");
+                                                        alert("Something went wrong, please try again.  Use something like DCache or gm2_sam.");
                                                       }
 
 
@@ -148,10 +107,7 @@
 
 				}  //ends if title statement
 				calendar.fullCalendar('unselect');
-			},  //ends function(
-
-
-
+			},  //ends select function(
 
 
 
@@ -161,190 +117,193 @@
                         //EDIT EVENT HERE
 
 			eventClick: function(event, element) {
-                           alert(event.id);
-     			   event.title = "CLICKED!";
-                           calendar.fullCalendar('updateEvent', event);
-			},
+                           if(event.editable == 'true')
+                           {
+
+     			      // event.title = "CLICKED!";
+                              // calendar.fullCalendar('updateEvent', event);
+
+
+                               var title = prompt('Event Title:', event.title);
+                               if(title === null || title == ""){return;}
+                               var start = prompt('Event Start:', event.start);
+                               if(start === null || start == ""){return;}
+                               var end = prompt('Event End:', event.end);
+                               if(end === null || end == ""){return;}
+
+                               if (title !== null && start !==null && end !== null) {
+
+                                  //alert(title);
+                                  //alert(start);
+                                  //alert(end);
+
+                                  var new_start_epoch = moment(start).unix();
+                                  var end_epoch = moment(end).unix();
+
+                                  //remember that we are using starttime and serviceid as primary key
+                                  //so be sure to pass in the original start key
+
+                                  $.post("/poms/edit_event", {title: title, start: event.start_key, new_start: new_start_epoch, end: end_epoch, s_id:event.id}, 
+                                            function(data){
+                                                alert(data);
+                                                if(data == "Ok.")
+                                                {
+                                                    $('#calendar').fullCalendar('refetchEvents');
+                                             
+                                                }
+                            
+                                                else
+                                                {
+                                                  alert("Something went wrong, please try again.");
+                                                }
+
+
+                                  });  //ends post
+
+
+
+                               }  //ends if title statement
+                               calendar.fullCalendar('unselect');
+
+                           }  //ends if event.editable == true
+
+                           else
+                           {
+                               alert("This is not editable.");
+                           }
+
+			},  //ends eventClick
+
+
+
+
+                        //DRAG AND DROP
+			eventDrop: function(event, revertFunc) {
+                           if(event.editable == 'true')
+                               {
+        		    	    //alert(event.title + " was dropped on " + event.start.format());
+
+        			    if (!confirm("Are you sure about this change?")) {
+                                          alert("you canceled");
+                                      //     revertFunc();
+                                          $('#calendar').fullCalendar('refetchEvents');  //???
+                                        //    $('#calendar').fullCalendar('unselect');  //???
+        			    }
+
+
+                                    else
+                                    {
+
+                                       var new_start_epoch = moment(event.start).unix();
+                                       var end_epoch = moment(event.end).unix();
+
+                                       $.post("/poms/edit_event", {title: event.title, start: event.start_key, new_start: new_start_epoch, end: end_epoch, s_id:event.id}, 
+                                               function(data){
+                                                   alert(data);
+                                                   if(data == "Ok.")
+                                                   {
+                                                       $('#calendar').fullCalendar('refetchEvents');
+                                             
+                                                   }
+                             
+                                                   else
+                                                   {
+                                                     alert("Something went wrong, please try again.");
+                                                   }
+
+
+                                     });  //ends post
+
+
+                                    }  //ends else
+
+                               }  //ends if event.editable
+                               else
+                               {
+                                   alert("This item is not editable.");
+
+                                   //revertFunc();
+                                   //$('#calendar').fullCalendar('unselect');
+                                   $('#calendar').fullCalendar('refetchEvents');
+                               }
+
+			},  //ends drag and drop
 
 
 
 
 
 
+                        //EVENT RESIZE
+                        eventResize: function(event, revertFunc) {
+                           if(event.editable == 'true')
+                           {
 
-//events:
-//[
-//  {
-//  id: 777,
-//  title: 'Long Event',
-//  start: '2015-10-07',
-//  end: '2015-10-08',
-//  color: 'red',
-//  allDay: false
-//  },
-//]
+                                //alert(event.title + " was dropped on " + event.start.format());
+
+                                if (!confirm("Are you sure about this change?")) {
+                                      alert("you canceled");
+                                       $('#calendar').fullCalendar('refetchEvents');
+                                      //revertFunc();
+                                }
 
 
-			//events: [
-				//{
-					//title: 'All Day Event',
-					//start: '2015-02-01'
-				//},
-				//{
-					//title: 'Long Event',
-					//start: '2015-02-07',
-					//end: '2015-02-10'
-				//},
-				//{
-					//id: 999,
-					//title: 'Repeating Event',
-					//start: '2015-02-09T16:00:00'
-				//},
-				//{
-					//id: 999,
-					//title: 'Repeating Event',
-					//start: '2015-02-16T16:00:00'
-				//},
-				//{
-					//title: 'Conference',
-					//start: '2015-02-11',
-					//end: '2015-02-13'
-				//},
-				//{
-					//title: 'Meeting',
-					//start: '2015-02-12T10:30:00',
-					//end: '2015-02-12T12:30:00'
-				//},
-				//{
-					//title: 'Lunch',
-					//start: '2015-02-12T12:00:00'
-				//},
-				//{
-					//title: 'Meeting',
-					//start: '2015-02-12T14:30:00'
-				//},
-				//{
-					//title: 'Happy Hour',
-					//start: '2015-02-12T17:30:00'
-				//},
-				//{
-					//title: 'Dinner',
-					//start: '2015-02-12T20:00:00'
-				//},
-				//{
-					//title: 'Birthday Party',
-					//start: '2015-02-13T07:00:00'
-				//},
-				//{
-					//title: 'Click for Google',
-					//url: 'http://google.com/',
-					//start: '2015-02-28'
-				//}
-			//]
-		});
+                                else
+                                {
+                                   var new_start_epoch = moment(event.start).unix();
+                                   var end_epoch = moment(event.end).unix();
+
+                                   $.post("/poms/edit_event", {title: event.title, start: event.start_key, new_start: new_start_epoch, end: end_epoch, s_id:event.id},
+                                           function(data){
+                                               alert(data);
+                                               if(data == "Ok.")
+                                               {
+                                                   $('#calendar').fullCalendar('rerenderEvents');
+
+                                               }
+
+                                               else
+                                               {
+                                                 alert("Something went wrong, please try again.");
+                                               }
+
+
+                                   });  //ends post
+
+
+                                }  //ends else
+
+                           }  //ends if event.editable
+                           else
+                           {
+                              alert("This item is not editable.");
+                              //revertFunc();
+                              //$('#calendar').fullCalendar('unselect');
+                              $('#calendar').fullCalendar('refetchEvents');
+                           }
+
+                        },  //ends resize
+
+
+
+
+
+
+		});  //ends var calendar = $('#calendar').fullCalendar({
 		
-	});
+	});  //ends dom ready
 
 </script>
+
+
+
 <style>
 
 	#calendar {
 		max-width: 900px;
 		margin: 0 auto;
 	}
-
 </style>
-
-
-
-
-
-
-
-
-
-
-
-<style>
-	#wrap {
-		width: 1100px;
-		margin: 0 auto;
-	}
-		
-	#external-events {
-		float: left;
-		width: 150px;
-		padding: 0 10px;
-		border: 1px solid #ccc;
-		background: #eee;
-		text-align: left;
-	}
-		
-	#external-events h4 {
-		font-size: 16px;
-		margin-top: 0;
-		padding-top: 1em;
-	}
-		
-	#external-events .fc-event {
-		margin: 10px 0;
-		cursor: pointer;
-	}
-		
-	#external-events p {
-		margin: 1.5em 0;
-		font-size: 11px;
-		color: #666;
-	}
-		
-	#external-events p input {
-		margin: 0;
-		vertical-align: middle;
-	}
-        /*
-	#calendar {
-		float: right;
-		width: 900px;
-	}
-        */
-</style>
-
-
-
-
-
-<!--
-	<div id='wrap'>
-
-		<div id='external-events'>
-			<h4>Draggable Events</h4>
-			<div class='fc-event'>My Event 1</div>
-			<div class='fc-event'>My Event 2</div>
-			<div class='fc-event'>My Event 3</div>
-			<div class='fc-event'>My Event 4</div>
-			<div class='fc-event'>My Event 5</div>
-			<p>
-				<input type='checkbox' id='drop-remove' />
-				<label for='drop-remove'>remove after drop</label>
-			</p>
-		</div>
-
-		<div id='calendar'></div>
-
-		<div style='clear:both'></div>
-
-	</div>
--->
-
-
-
-
-
-
-
-
-
-
 
 
 
