--- a/webservice/templates/calendar.html
+++ b/webservice/templates/calendar.html
@@ -38,6 +38,8 @@
 
 {%block content%}
 
+
+
 <script>
 
 	$(document).ready(function() {
@@ -52,7 +54,6 @@
 			header: {
 				left: 'prev,next today',
 				center: 'title',
-				//right: 'month,basicWeek,basicDay'
                                 right: 'month,basicWeek,agendaDay'
 			},
                         defaultDate: date,
@@ -70,6 +71,7 @@
 
                         //CREATE EVENT HERE
 			select: function(start, end) {
+                                alert("available options: \n{% for row in rows %}{{row.name}}\n{% endfor %}");
 				var title = prompt('Event Title:');
 
 
@@ -81,23 +83,23 @@
                                                       alert(data);
                                                       if(data == "Ok.")
                                                       {
-                                                          //$('#calendar').fullCalendar('refetchEvents');
+                                                          $('#calendar').fullCalendar('refetchEvents');
 
-                                                          calendar.fullCalendar('renderEvent',
-                                                                  {
-                                                                          title: title,
-                                                                          start: start,
-                                                                          end: end,
-                                                                  },
-                                                                  true // make the event "stick"
-                                                          );
+                                                          //calendar.fullCalendar('renderEvent',
+                                                                  //{
+                                                                          //title: title,
+                                                                          //start: start,
+                                                                          //end: end,
+                                                                  //},
+                                                                  //true // make the event "stick"
+                                                          //);
 
                                              
                                                       }
                             
                                                       else
                                                       {
-                                                        alert("Something went wrong, please try again.  Use something like DCache or gm2_sam.");
+                                                        alert("Something went wrong, please try again.");
                                                       }
 
 
@@ -143,7 +145,7 @@
                                   //remember that we are using starttime and serviceid as primary key
                                   //so be sure to pass in the original start key
 
-                                  $.post("/poms/edit_event", {title: title, start: event.start_key, new_start: new_start_epoch, end: end_epoch, s_id:event.id}, 
+                                  $.post("/poms/edit_event", {title: title, start: event.start_key, new_start: new_start_epoch, end: end_epoch, s_id:event.s_id}, 
                                             function(data){
                                                 alert(data);
                                                 if(data == "Ok.")
@@ -185,9 +187,9 @@
 
         			    if (!confirm("Are you sure about this change?")) {
                                           alert("you canceled");
-                                      //     revertFunc();
+                                        //   revertFunc();
                                           $('#calendar').fullCalendar('refetchEvents');  //???
-                                        //    $('#calendar').fullCalendar('unselect');  //???
+                                      //      $('#calendar').fullCalendar('unselect');  //???
         			    }
 
 
@@ -197,7 +199,7 @@
                                        var new_start_epoch = moment(event.start).unix();
                                        var end_epoch = moment(event.end).unix();
 
-                                       $.post("/poms/edit_event", {title: event.title, start: event.start_key, new_start: new_start_epoch, end: end_epoch, s_id:event.id}, 
+                                       $.post("/poms/edit_event", {title: event.title, start: event.start_key, new_start: new_start_epoch, end: end_epoch, s_id:event.s_id}, 
                                                function(data){
                                                    alert(data);
                                                    if(data == "Ok.")
@@ -242,9 +244,14 @@
                                 //alert(event.title + " was dropped on " + event.start.format());
 
                                 if (!confirm("Are you sure about this change?")) {
-                                      alert("you canceled");
-                                       $('#calendar').fullCalendar('refetchEvents');
-                                      //revertFunc();
+                                      //alert("you canceled");
+                                     // $('#calendar').fullCalendar('rerenderEvents');
+                                        $('#calendar').fullCalendar('refetchEvents');
+
+$('#calendar').fullCalendar('unselect');
+//revertFunc();
+//$('#calendar').fullCalendar('rerenderEvents');
+                                      
                                 }
 
 
@@ -253,7 +260,7 @@
                                    var new_start_epoch = moment(event.start).unix();
                                    var end_epoch = moment(event.end).unix();
 
-                                   $.post("/poms/edit_event", {title: event.title, start: event.start_key, new_start: new_start_epoch, end: end_epoch, s_id:event.id},
+                                   $.post("/poms/edit_event", {title: event.title, start: event.start_key, new_start: new_start_epoch, end: end_epoch, s_id:event.s_id},
                                            function(data){
                                                alert(data);
                                                if(data == "Ok.")
