add to both menus

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -200,6 +200,14 @@
 	                    <b>DB Admin</b>
                         </a>
 
+            <div class="item">
+                <div class="header">Campaigns</div>
+                <div class="menu">
+                <a class="item" href="/poms/show_campaigns">
+                  Active
+                </a>
+                </div>
+            </div>
                         
                         <div class="item">
                             <div class="header">Jobs</div>
