more job triage goodies

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -32,8 +32,9 @@
             <link href='/poms/static/css/fullcalendar.css' rel='stylesheet' />
             <link href='/poms/static/css/fullcalendar.print.css' rel='stylesheet' media='print' />
             <script src='/poms/static/js/moment.min.js'></script>
+            <script src='/poms/static/js/moment-timezone.min.js'></script>
+            <script src='/poms/static/js/moment-timezone-with-data.js'></script>
             <script src='/poms/static/js/fullcalendar.min.js'></script>
-
     </head>
     
     
