--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -24,7 +24,7 @@
                     
           <div class="sub header">
               triage your jobs
-          </div>
+         </div>
 </h1>
 {%endblock%}
 
@@ -40,11 +40,131 @@
 {%block content %}
 
 
+
+
+
+
+<table class="ui celled table">
+  <thead>
+    <tr>
+      <th>Status</th>
+      <th>Host Site</th>
+      <th>Node Name</th>
+      <th>CPU</th>
+      <th>Jobsub_Job_ID</th>
+      <th>Task ID</th>
+      <th>Usr Exe Exit Code</th>
+      <th>Updated</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td {% if job_info.Job.status == "Completed" %} class="positive">  <i class="icon checkmark"></i>  {% else %} >  {% endif %}      {{job_info.Job.status}}</td>
+      <td>{{job_info.Job.host_site}}</td>
+      <td>{{job_info.Job.node_name}}</td>
+      <td>{{job_info.Job.cpu_type}}</td>
+      <td>{{job_info.Job.jobsub_job_id}}</td>
+     <!-- <td><a href="/poms/task_info?task_id={{job_info.Job.task_id}}">{{job_info.Job.task_id}}</a></td> -->
+      <td>{{job_info.Job.task_id}}</td>
+      <td>{{job_info.Job.user_exe_exit_code}}</td>
+      <td>{{job_info.Job.updated}}</td>
+    </tr>
+
+
+  </tbody>
+</table>
+
+
+
+
+
+
+
+
+<!--<h2 class="ui dividing header">Logs:</h2>-->
+
+<h4 class="ui horizontal divider header">
+      <i class="file outline icon"></i>
+      Logs
+</h4>
+
+
 {% for item in job_file_list %}
 
 <a href="/poms/job_file_contents?job_id={{job_id}}&file={{item}}">{{ item }}</a>
+<br/>
 
 {% endfor %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<h2 class="ui dividing header">General Job Info:</h2>-->
+
+<h4 class="ui horizontal divider header">
+      <i class="bar chart icon"></i>
+      General Specifications
+</h4>
+
+//
+<table class="ui definition table">
+    <tbody>
+      <tr>
+        <td class="three wide">Experiment</td>
+        <td>
+          <p>{{job_info.Campaign.experiment}}</p>
+        </td>
+      </tr>
+      
+      <tr>
+        <td>Campaign</td>
+        <td>
+          <p>{{job_info.Campaign.name}}</p>
+        </td>
+      </tr>
+      <tr>
+        <td>Command Executed</td>
+        <td>
+          <p>{{job_info.Task.command_executed}}</p>
+        </td>
+      </tr>
+      <tr>
+        <td>Task Def Name</td>
+        <td>
+          <p>{{job_info.TaskDefinition.name}}</p>
+        </td>
+      </tr>
+      <tr>
+        <td>Modules</td>
+        <td>
+          <p>...</p>
+        </td>
+      </tr>
+      <tr>
+        <td>Behaviors</td>
+        <td>
+          <p>...</p>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+//
+
+
+
+
+
 
 	
 {%endblock%}
