--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -54,7 +54,7 @@
         <div class="ui vertical inverted sidebar menu" id="toc">
             
             <div class="item">
-                <i class="certificate icon"></i>
+                <i class="rocket icon"></i>
               <!--
                 <a class="ui logo icon image" href="">
                     <img src="/poms/static/images/logo.png">
@@ -180,7 +180,7 @@
                             </a>
                         -->
                             <a href="">
-                              <i class="certificate icon"></i>
+                              <i class="rocket icon"></i>
                               <b>POMS</b>
                             </a>
                         </div>
