--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -116,7 +116,6 @@
       General Specifications
 </h4>
 
-//
 <table class="ui definition table">
     <tbody>
       <tr>
@@ -145,27 +144,58 @@
         </td>
       </tr>
       <tr>
-        <td>Modules</td>
+        <td>Task Status</td>
         <td>
-          <p>...</p>
+          <p>{{job_info.Task.status}}</p>
         </td>
       </tr>
       <tr>
-        <td>Behaviors</td>
+        <td>VO Role</td>
         <td>
-          <p>...</p>
+          <p>{{job_info.Campaign.vo_role}}</p>
         </td>
       </tr>
     </tbody>
   </table>
 
-//
+
+
+
+
+
+<h4 class="ui horizontal divider header">
+      <i class="history icon"></i>
+      History
+</h4>
 
 
 
 
 
 
-	
+
+
+
+
+<table class="ui very basic collapsing celled table">
+        <tbody>
+          <tr>
+            <td class="six wide">Event</td>
+            <td class="six wide">Timestamp</td>
+          </tr>
+          {% for item in job_history %}
+          <tr>
+            <td><code>{{item.status}}</code></td>
+            <td>{{item.created}}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+</table>
+
+
+
+
+
+
 {%endblock%}
 
