refetch logs button

--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -88,7 +88,7 @@
       Logs
 </h4>
 
-<button class="ui button">Refetch &nbsp;&nbsp;&nbsp;<i class="refresh icon"></i></button>
+<button onclick="location.href='/poms/triage_job?job_id={{job_id}}&force_reload=True';" class="ui button">Refetch &nbsp;&nbsp;&nbsp;<i class="refresh icon"></i></button>
 <br/>
 <br/>
 
