--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -93,21 +93,13 @@
                 <div class="header">Jobs</div>
                 <div class="menu">
                     
-                    <a class="item" href="all.html">
+                    <a class="item" href="/poms/job_table">
                         All
                     </a>
-                    
-                    <a class="item" href="analysis.html">
-                        Analysis
+                    <a class="item" href="/poms/jobs_by_exitcode">
+                        By Exit Code
                     </a>
                     
-                    <a class="item" href="production.html">
-                        Production
-                    </a>
-                    
-                    <a class="item" href="batch.html">
-                        Batch
-                    </a>
                 </div>
             </div>
             
@@ -212,24 +204,16 @@
                         
                         <div class="item">
                             <div class="header">Jobs</div>
-                            <div class="menu">
-                                
-                                <a class="item" href="all.html">
-                                    All
-                                </a>
-                                
-                                <a class="item" href="Analasys.html">
-                                    Analasys
-                                </a>
-                                
-                                <a class="item" href="production.html">
-                                    Production
-                                </a>
-                                
-                                <a class="item" href="batch.html">
-                                    Batch
-                                </a>
-                            </div>
+				<div class="menu">
+				    
+				    <a class="item" href="/poms/job_table">
+					All
+				    </a>
+				    <a class="item" href="/poms/jobs_by_exitcode">
+					By Exit Code
+				    </a>
+				    
+				</div>
                         </div>
                         
                         <div class="item">
