--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -93,16 +93,17 @@
                 <div class="header">Jobs</div>
                 <div class="menu">
                     
-                    <a class="item" href="/poms/job_table">
-                        All
+                    <a class="item" href="/poms/job_table?tdays=1">
+                        All (Last Day)
                     </a>
-                    <a class="item" href="/poms/jobs_by_exitcode">
-                        By Exit Code
+                    <a class="item" href="/poms/jobs_by_exitcode?tdays=1">
+                        By Exit Code (Last Day)
                     </a>
-                    
+                    <a class="item" href="/poms/jobs_by_exitcode?tdays=7">
+                        By Exit Code (Last Week)
+                    </a>
                 </div>
             </div>
-            
             
             <div class="item">
                 <div class="header">Output Datasets</div>
@@ -205,13 +206,16 @@
                         <div class="item">
                             <div class="header">Jobs</div>
 				<div class="menu">
+				    <a class="item" href="/poms/job_table?tdays=1">
+					All (Last Day)
+				    </a>
+				    <a class="item" href="/poms/jobs_by_exitcode?tdays=1">
+					By Exit Code (Last Day)
+				    </a>
+				    <a class="item" href="/poms/jobs_by_exitcode?tdays=7">
+					By Exit Code (Last Week)
+				    </a>
 				    
-				    <a class="item" href="/poms/job_table">
-					All
-				    </a>
-				    <a class="item" href="/poms/jobs_by_exitcode">
-					By Exit Code
-				    </a>
 				    
 				</div>
                         </div>
