--- a/webservice/static/css/poms.css
+++ b/webservice/static/css/poms.css
@@ -2361,8 +2361,8 @@ code .chunk {
     }
 }
 
-/* Remove Rail */
-@media only screen and (max-width: 992px) {
+/* Remove Rail IMPORTANT FOR GETTING RID OF THIRD COLUMN */
+@media only screen and (max-width: 11992px) {
 
     /* Remove Rail */
     #example .main.container > .right.rail,
