breadcrumbs and under construction and minor ui tweaks

--- a/webservice/templates/job_table.html
+++ b/webservice/templates/job_table.html
@@ -6,9 +6,11 @@
 
 
 {%block breadcrumbs%}
-    <div class="item">
-       Service Statuses  <!--label of current location on mobile-->
-    </div>
+<div class="ui breadcrumb" style="margin-top: -45px;">
+  <a href="/poms" class="section">Home</a>
+  <div class="divider"> / </div>
+  <div class="section">All Jobs</div>
+</div>
 {%endblock%}
 
 
