--- a/webservice/templates/calendar.html
+++ b/webservice/templates/calendar.html
@@ -5,12 +5,11 @@
 {%endblock%}
 
 {%block breadcrumbs%}
-    <div class="item">
-       Dashboard  <!--label of current location on mobile-->
-    </div>
-    <div class="item">
-      POMS Downtime Calendar <!--label of current location on mobile-->
-    </div>
+<div class="ui breadcrumb" style="margin-top:-45px;">
+  <a href="/poms" class="section">Home</a>
+  <div class="divider"> / </div>
+  <div class="section">Calendar</div>
+</div>
 {%endblock%}
 
 
