--- a/webservice/templates/campaign_grid.html
+++ b/webservice/templates/campaign_grid.html
@@ -6,12 +6,11 @@
 
 
 {%block breadcrumbs%}
-    <div class="item">
-       Dashboard  <!--label of current location on mobile-->
-    </div>
-    <div class="item">
-      Campaigns
-    </div>
+<div class="ui breadcrumb" style="margin-top: -45px;">
+  <a href="/poms" class="section">Home</a>
+  <div class="divider"> / </div>
+  <div class="section">Campaigns</div>
+</div>
 {%endblock%}
 
 
