trying to keep production instance happy with trailing slash

--- a/webservice/templates/calendar.html
+++ b/webservice/templates/calendar.html
@@ -18,7 +18,7 @@
 
 {%block header%}
 <h1 class="ui header">
-     POMS Downtime Calendar                               
+     Downtime Calendar                               
     <div class="sub header">
         view service downtimes
     </div>
@@ -29,7 +29,7 @@
 
 
 {%block subheader%}
-<h2 class="ui dividing header">Downtimes:</h2>
+<h2 class="ui dividing header">Downtimes</h2>
 {%endblock%}
 
 
