--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             
-            <a class="item" href="/poms">
+            <a class="item" href="/poms/">
                 <b>Dashboard</b>
             </a>
             
@@ -156,7 +156,7 @@
                               </div>
                         </div>
                         
-                        <a class="item" href="/poms">
+                        <a class="item" href="/poms/">
                             <b>Dashboard</b>
                         </a>
 
